# matched-analytics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  result.csv  supply_by_supplier_data.csv  template.code-workspace  template.env  trimmed_supply_by_supplier_data.csv
data/: pyproject.toml
data/ofgem/: prepare_regos_subset.py
data/ofgem/rego_accredited_stations/: AccreditedStationsExternalPublic.REGO.Over-50-kW-DNC.not-wind-or-solar_SUBSET.csv
data/src/data/: register.py
data/src/data/elexon/: S0142_20230330_SF_20230425121906_GOLD.csv  prepare_bmunits_subset.py
data/src/data/neso/: df_fuel_ckan_apr2022_mar2023.csv  df_fuel_ckan_feb2023_mar2023.csv  df_fuel_ckan_subset.csv  prepare_neso_subset.py
data/src/data/ofgem/: prepare_regos_subset.py  regos_apr2022_mar2023_SUBSET.csv  regos_mar2023_SUBSET.csv
data/src/data/ofgem/rego_accredited_stations/: AccreditedStationsExternalPublic.REGO.Over-50-kW-DNC.not-wind-or-solar_SUBSET.csv  AccreditedStationsExternalPublic.REGO.off-shore-wind.on-shore-wind.wind.wind-50kW-DNC-or-less_SUBSET.csv
data/src/data/processed/: README.md  consumption_by_month.csv  watts_up_cp22_feb_1_consumption_by_hour.csv  watts_up_cp22_feb_1_supply_by_hour.csv  watts_up_cp22_regos_by_tech_month_holder.csv
m_elexon/: pyproject.toml
m_elexon/src/m_elexon/: models.py  utils.py
m_elexon/src/m_elexon/S0142/: download_raw.py  plot.py  process_csv.py
m_elexon/tests/S0142/: test_process_csv_plot.py  test_process_raw.py
m_mapper/: README.md  mypy.ini  pyproject.toml
m_mapper/src/m_mapper/: filter_on_aggregate_data.py  filter_on_bmu_meta_data.py  main.py  summarise_and_score.py  utils.py
m_mapper/src/m_mapper/data/: bmus.py  regos.py
m_mapper/tests/: test_main.py
m_mapper/tests/data/: bmunits_SUBSET.json  prepare_bmunits_subset.py  prepare_regos_subset.py  regos_apr2022_mar2023_SUBSET.csv
m_mapper/tests/data/rego_accredited_stations/: AccreditedStationsExternalPublic.REGO.off-shore-wind.on-shore-wind.wind.wind-50kW-DNC-or-less_SUBSET.csv
src/ma/: __init__.py
src/ma/downscaler/: downscale_supply_monthly_gen_to_hh.py
src/ma/elexon/: README.md  bmus.py  metering_data.py  metering_data_rollup.py  models.py  schema_bmus.py  schema_metering_data.py
src/ma/elexon/S0142/: bmu_vols.py  download_raw.py  plot.py  process_csv.py  process_raw.py  processed_S0142.py  schema_S0142.py
src/ma/elexon/api/: endpoints.py
src/ma/elexon/metering_data/: asset_half_hourly_by_bmu.py  metering_data_by_half_hour_and_bmu.py  metering_data_by_time.py  metering_data_rollup.py
src/ma/mapper/: README.md  bmu_helpers.py  common.py  expected_mappings.yaml  filter_on_aggregate_data.py  filter_on_bmu_meta_data.py  main.py  map_rego_stations_to_bmus.py  rego_helpers.py  summarise_and_score.py
src/ma/mapper/data/: bmus.py  regos.py
src/ma/mapper/golden_data/: README.md  mappings.csv
src/ma/matching/: base.py  match_half_hourly.py  match_monthly.py  utils.py
src/ma/matching_scores/: matching_scores_monthly.py
src/ma/neso/: grid_mix.py  historic_gen.py  schema_grid_mix.py  schema_historic_gen.py
src/ma/ofgem/: enums.py  regos.py  schema_regos.py  schema_stations.py  stations.py
src/ma/retailer/: consumption.py  supply_hh.py  upsampled_supply_hh.py
src/ma/upsampled_supply_hh/: consumption.py  upsampled_supply_hh.py
src/ma/upsampler/: upsample_supply_monthly_gen_to_hh.py
src/ma/utils/: conf.py  enums.py  io.py  misc.py  pandas.py  plotly.py
test_data/: pyproject.toml  register.py
tests/elexon/S0142/: test_process_raw.py
tests/ma/downscaler/: test_downscaler.py
tests/ma/elexon/: test_metering_data.py  test_metering_data_rollup.py
tests/ma/elexon/S0142/: test_process_csv_plot.py  test_process_raw.py  test_processed_S0142.py
tests/ma/elexon/S0142/data/: S0142_20230331_SF_20230426191253_GOLD.csv
tests/ma/elexon/metering_data/: test_asset_half_hourly_by_bmu.py  test_metering_by_time.py  test_metering_data_by_half_hour_and_bmu.py  test_transforms.py
tests/ma/mapper/: test_main.py  test_map_rego_stations_to_bmus.py  test_rego_helpers.py
tests/ma/matching/: test_match_half_hourly.py  test_match_monthly.py
tests/ma/neso/: test_grid_mix.py  test_historic_gen.py
tests/ma/ofgem/: test_ofgem_enums.py  test_regos.py  test_schema_regos.py  test_stations.py
tests/ma/retailer/: test_upsampled_supply_hh.py
tests/ma/upsampler/: test_upsampled_supply_hh.py  test_upsampler.py
tests/ma/utils/: test.csv  test_conf.py  test_enums.py  test_pandas.py  test_pandas_data_frame_asset.py
tests/mapper/: test_main.py
tests/mapper/data/: README.md  prepare_bmunits_subset.py  prepare_regos_subset.py
tests/mapper/data/rego_accredited_stations/: README.md
