[project]
name = "matched-analytics"
version = "0.1.0"
description = "Tools to track renewable energy supply from public data"
authors = [
    {name = "Matched"},
]
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "pandera>=0.22.1",
    "xxhash>=3.5.0",
    "setuptools-scm>=8.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "pandas-stubs>=2.2.3.241126",
    "ipykernel>=6.29.5",
    "pip>=25.0",
    "types-PyYAML>=6.0.12.20241230",
    "types-python-dateutil>=2.9.0.20241206",
    "pre-commit>=4.1.0",
]

[tool.ruff]
line-length = 120

[tool.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]


[tool.pdm]
distribution = true

[tool.pdm.scripts]
mypy = "mypy src tests"
ruff = "ruff format src tests"
tests = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/data#egg=data",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
root = "."
fallback_version = "0.0"
