[project]
name = "m_elexon"
version = "0.1.0"
description = "Tools to collect, parse, and process data from Elexon"
authors = [
    {name = "Joe Kwiatkowski", email = "joe@matched.energy"},
]
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-randomly>=3.16.0",
    "pandas-stubs>=2.2.3.241126",
    "pip>=24.3.1",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 120

[tool.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]


[tool.pdm]
distribution = true

[tool.pdm.scripts]
mypy = "mypy src tests"
ruff = "ruff format src tests"
tests = "pytest"

