[project]
name = "m_mapper"
version = "0.1.0"
description = "Tools to map entities across data feeds"
authors = [
    {name = "Joe Kwiatkowski", email = "joe@matched.energy"},
]
dependencies = [
    "pandas>=2.2.3",
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "pylance>=0.22.0",
    "httpx>=0.28.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-randomly>=3.16.0",
    "pandas-stubs>=2.2.3.241126",
    "types-python-dateutil>=2.9.0.20241206",
    "types-PyYAML>=6.0.12.20241230",
    "pyright>=1.1.392.post0",
]

[tool.ruff]
line-length = 120

[tool.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../m_elexon#egg=m-elexon",
]

[tool.pdm.scripts]
mypy = "mypy src tests"
pyright = "pyright src tests"
ruff = "ruff format src tests"
tests = "pytest"
